Move sandbox braintree vars to travis envs

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-BRAINTREE_MERCHANT_ID=fkwxjxrny6xtty7d
-BRAINTREE_PUBLIC_KEY=8zzbxvfr3g7978p3
-BRAINTREE_PRIVATE_KEY=28f50a3ce5c22ce42a664dac7393c38a
+BRAINTREE_MERCHANT_ID=
+BRAINTREE_PUBLIC_KEY=
+BRAINTREE_PRIVATE_KEY=
 BRAINTREE_MODEL=User
