--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "illuminate/database": "~5.3",
         "illuminate/support": "~5.3",
         "nesbot/carbon": "~1.0",
-        "symfony/http-kernel": "~2.7|~3.0"
+        "symfony/http-kernel": "~2.7|~3.0|~4.4|~5.0"
     },
     "require-dev": {
         "illuminate/http": "~5.3",
