--- a/composer.json
+++ b/composer.json
@@ -9,18 +9,18 @@
     ],
     "require": {
         "braintree/braintree_php": "^4.6",
-        "illuminate/database": "~6.0",
-        "illuminate/support": "~6.0",
+        "illuminate/database": "^6.0",
+        "illuminate/support": "^6.0",
         "nesbot/carbon": "~2.0",
-        "symfony/http-kernel": "~5.0"
+        "symfony/http-kernel": "^4.3.4"
     },
     "require-dev": {
-        "illuminate/http": "~6.0",
-        "illuminate/routing": "~6.0",
-        "illuminate/view": "~6.0",
-        "mockery/mockery": "~1.3",
-        "phpunit/phpunit": "~7.0",
-        "vlucas/phpdotenv": "~4.0"
+        "illuminate/http": "^6.0",
+        "illuminate/routing": "^6.0",
+        "illuminate/view": "^6.0",
+        "mockery/mockery": "^1.3.1",
+        "phpunit/phpunit": "^7.5.15|^8.4|^9.0",
+        "vlucas/phpdotenv": "^3.3"
     },
 
     "autoload": {
