--- a/composer.json
+++ b/composer.json
@@ -9,18 +9,18 @@
     ],
     "require": {
         "braintree/braintree_php": "^4.6",
-        "illuminate/database": "~5.3",
-        "illuminate/support": "~5.3",
-        "nesbot/carbon": "~1.0",
-        "symfony/http-kernel": "~2.7|~3.0|~4.4|~5.0"
+        "illuminate/database": "^6.0",
+        "illuminate/support": "^6.0",
+        "nesbot/carbon": "~2.0",
+        "symfony/http-kernel": "^4.3.4"
     },
     "require-dev": {
-        "illuminate/http": "~5.3",
-        "illuminate/routing": "~5.3",
-        "illuminate/view": "~5.3",
-        "mockery/mockery": "~0.9",
-        "phpunit/phpunit": "~6.5",
-        "vlucas/phpdotenv": "~2.0"
+        "illuminate/http": "^6.0",
+        "illuminate/routing": "^6.0",
+        "illuminate/view": "^6.0",
+        "mockery/mockery": "^1.3.1",
+        "phpunit/phpunit": "^7.5.15|^8.4|^9.0",
+        "vlucas/phpdotenv": "^3.3"
     },
 
     "autoload": {
